--- a/requirements.txt
+++ b/requirements.txt
@@ -1,162 +1,16 @@
 # This file may be used to create an environment using:
 # $ conda create --name <env> --file <this file>
 # platform: linux-64
-_libgcc_mutex=0.1=main
-_openmp_mutex=4.5=1_gnu
-absl-py=0.12.0=pypi_0
-appdirs=1.4.4=pypi_0
-astunparse=1.6.3=pypi_0
-audioread=2.1.9=pypi_0
-blas=1.0=mkl
-bzip2=1.0.8=h7b6447c_0
-ca-certificates=2021.7.5=h06a4308_1
-cachetools=4.2.1=pypi_0
-certifi=2021.5.30=py37h06a4308_0
-cffi=1.14.6=py37h400218f_0
-chardet=4.0.0=pypi_0
-click=7.1.2=pypi_0
-cudatoolkit=10.2.89=hfd86e86_1
-cycler=0.10.0=py37_0
-dbus=1.13.18=hb2f20db_0
-decorator=5.0.7=pypi_0
-expat=2.4.1=h2531618_2
 ffmpeg=4.3.1=h3215721_1
-ffmpeg-python=0.2.0=pypi_0
-fontconfig=2.13.1=h6c09931_0
-freetype=2.10.4=h5ab3b9f_0
-future=0.18.2=pypi_0
-gast=0.3.3=pypi_0
-gettext=0.21.0=hf68c758_0
-glib=2.69.0=h5202010_0
-gmp=6.2.1=h2531618_2
-gnutls=3.6.15=he1e5248_0
-google-auth=1.28.1=pypi_0
-google-auth-oauthlib=0.4.4=pypi_0
-google-pasta=0.2.0=pypi_0
-grpcio=1.37.0=pypi_0
-gst-plugins-base=1.14.0=h8213a91_2
-gstreamer=1.14.0=h28cd5cc_2
-h11=0.12.0=pypi_0
-h2=3.2.0=pypi_0
-h5py=2.10.0=pypi_0
-hpack=3.0.0=pypi_0
-httpcore=0.12.3=pypi_0
-httpx=0.16.1=pypi_0
-hyperframe=5.2.0=pypi_0
-icu=58.2=he6710b0_3
-idna=3.1=pypi_0
-importlib-metadata=3.10.1=pypi_0
-intel-openmp=2021.3.0=h06a4308_3350
-joblib=1.0.1=pyhd3eb1b0_0
-jpeg=9b=h024ee3a_2
-keras-preprocessing=1.1.2=pypi_0
-kiwisolver=1.3.1=py37h2531618_0
-lame=3.100=h7b6447c_0
-lcms2=2.12=h3be6417_0
-ld_impl_linux-64=2.35.1=h7274673_9
-libedit=3.1.20191231=h14c3975_1
-libffi=3.3=he6710b0_2
-libflac=1.3.3=he1b5a44_0
-libgcc-ng=9.3.0=h5101ec6_17
-libgfortran-ng=7.5.0=ha8ba4b0_17
-libgfortran4=7.5.0=ha8ba4b0_17
-libgomp=9.3.0=h5101ec6_17
-libiconv=1.16=h516909a_0
-libidn2=2.3.2=h7f8727e_0
-libllvm10=10.0.1=hbcb73fb_5
-libogg=1.3.5=h27cfd23_1
-libopenblas=0.3.12=pthreads_hb3c22a3_1
-libpng=1.6.37=hbc83047_0
-librosa=0.8.0=pypi_0
-libsndfile=1.0.29=he1b5a44_0
-libstdcxx-ng=9.3.0=hd4cf53a_17
-libtasn1=4.16.0=h27cfd23_0
-libtiff=4.2.0=h85742a9_0
-libunistring=0.9.10=h27cfd23_0
-libuuid=1.0.3=h1bed415_2
-libuv=1.40.0=h7b6447c_0
-libvorbis=1.3.7=h7b6447c_0
-libwebp-base=1.2.0=h27cfd23_0
-libxcb=1.14=h7b6447c_0
-libxml2=2.9.12=h03d6c58_0
-llvmlite=0.34.0=py37h269e1b5_4
-lz4-c=1.9.3=h2531618_0
-markdown=3.3.4=pypi_0
-matplotlib=3.3.2=py37hc8dfbb8_1
-matplotlib-base=3.3.2=py37hc9afd2a_1
-mkl=2020.2=256
-mkl-service=2.3.0=py37he8ac12f_0
-mkl_fft=1.2.0=py37h23d657b_0
-mkl_random=1.1.1=py37h0573a6f_0
-ncurses=6.2=he6710b0_1
-nettle=3.7.3=hbbd107a_1
-ninja=1.10.2=hff7bd54_1
-norbert=0.2.1=pypi_0
-numba=0.51.2=py37h9fdb41a_0
+museval==0.4.0
 numpy=1.18.5=pypi_0
-numpy-base=1.19.1=py37hfa32c7d_0
-oauthlib=3.1.0=pypi_0
-olefile=0.46=py37_0
-openh264=2.1.1=h8b12597_0
-openjpeg=2.3.0=h05c96fa_1
-openssl=1.1.1k=h27cfd23_0
-opt-einsum=3.3.0=pypi_0
-packaging=20.9=pypi_0
-pandas=1.1.2=pypi_0
-pcre=8.45=h295c915_0
-pillow=8.3.1=py37h2c7a002_0
-pip=21.1.3=py37h06a4308_0
-pooch=1.3.0=pypi_0
-protobuf=3.15.8=pypi_0
-pthread-stubs=0.4=h14c3975_1001
-pyasn1=0.4.8=pypi_0
-pyasn1-modules=0.2.8=pypi_0
-pycparser=2.20=py_2
-pyparsing=2.4.7=pyhd3eb1b0_0
-pyqt=5.9.2=py37h05f1152_2
 pysocks=1.7.1=py37he5f6b98_2
 pysoundfile=0.10.2=py_1001
 python=3.7.10=h12debd9_4
-python-dateutil=2.8.2=pyhd3eb1b0_0
-python_abi=3.7=1_cp37m
 pytorch=1.9.0=py3.7_cuda10.2_cudnn7.6.5_0
-pytz=2021.1=pypi_0
-qt=5.9.7=h5867ecd_1
-readline=8.1=h27cfd23_0
-requests=2.25.1=pypi_0
-requests-oauthlib=1.3.0=pypi_0
 resampy=0.2.2=py_0
-rfc3986=1.4.0=pypi_0
-rsa=4.7.2=pypi_0
 scikit-learn=0.23.2=py37h0573a6f_0
 scipy=1.4.1=pypi_0
 setuptools=52.0.0=py37h06a4308_0
-sip=4.19.8=py37hf484d3e_0
-six=1.16.0=pyhd3eb1b0_0
-sniffio=1.2.0=pypi_0
-spleeter=2.2.1=pypi_0
-sqlite=3.36.0=hc218d9a_0
-tensorboard=2.4.1=pypi_0
-tensorboard-plugin-wit=1.8.0=pypi_0
-tensorflow=2.3.0=pypi_0
-tensorflow-estimator=2.3.0=pypi_0
-termcolor=1.1.0=pypi_0
-threadpoolctl=2.2.0=pyhb85f177_0
-tk=8.6.10=hbc83047_0
 torchaudio=0.9.0=py37
 torchvision=0.10.0=py37_cu102
-tornado=6.1=py37h27cfd23_0
-typer=0.3.2=pypi_0
-typing-extensions=3.7.4.3=pypi_0
-typing_extensions=3.10.0.0=pyh06a4308_0
-urllib3=1.26.4=pypi_0
-werkzeug=1.0.1=pypi_0
-wheel=0.36.2=pyhd3eb1b0_0
-wrapt=1.12.1=pypi_0
-x264=1!152.20180806=h7b6447c_0
-xorg-libxau=1.0.9=h14c3975_0
-xorg-libxdmcp=1.1.3=h516909a_0
-xz=5.2.5=h7b6447c_0
-zipp=3.4.1=pypi_0
-zlib=1.2.11=h7b6447c_3
-zstd=1.4.9=haebb681_0
